package com.directi.training.lsp.exercise.Solution;

public class ElectronicDuck {
    private boolean _on = false;

    public boolean is_on() {
        return _on;
    }

    public void quack() {
        if (_on) {
            System.out.println("Electronic duck quack...");
        } else {
            throw new RuntimeException("Can't quack when off");
        }
    }

    public void swim() {
        if (_on) {
            System.out.println("Electronic duck swim");
        } else {
            throw new RuntimeException("Can't swim when off");
        }
    }

    public void turnOn() {
        _on = true;
    }

    public void turnOff() {
        _on = false;
    }
}
